--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trading-model",
+  "name": "trading-app",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -7,7 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.4",
+    "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
