--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
-{
-  "name": "trading-app",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "yahoo-finance2": "^2.0.0"
-  }
+"dependencies": {
+  "next": "^13.5.6",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
+},
+"devDependencies": {
+  "tailwindcss": "^3.3.2",
+  "postcss": "^8.4.24",
+  "autoprefixer": "^10.4.14"
 }
