--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "trading-app",
+  "name": "koos-dating-trading-bot",
   "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+  "type": "module",
+  "engines": {
+    "node": "18.x"
   },
-  "dependencies": {
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "node-fetch": "^3.3.2"
+  "scripts": {
+    "start": "node pages/index.js"
   }
 }
